add docker prxy and swag to main compose. add swag labels to every service that needs it to be exposed to the internet. close ports that are not needed because of swag.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ networks:
   arrs:
   jellyfin:
 include:
+#### Core
+  - yml/swag.yml
+  - yml/dockerproxy.yml
 #### Arrs
   - yml/radarr.yml
   - yml/sonarr.yml
