--- a/yml/bazarr.yml
+++ b/yml/bazarr.yml
@@ -5,8 +5,8 @@ services:
     restart: "unless-stopped"
     networks:
       - arrs
-    ports:
-      - "6767:6767"
+    #ports:
+    #  - "6767:6767"
     volumes:
       - $DOCKERDIR/appdata/bazarr:/config
       - $DATADIR/media:/data/media
@@ -15,3 +15,5 @@ services:
       TZ: $TZ
       PUID: $PUID
       PGID: $PGID
+      labels:
+      - swag=enable
