--- a/yml/jellyfin.yml
+++ b/yml/jellyfin.yml
@@ -5,8 +5,8 @@ services:
     restart: "unless-stopped"
     networks:
       - jellyfin
-    ports: 
-      - "8096:8096"
+    #ports: 
+    #  - "8096:8096"
     devices:
       - /dev/dri:/dev/dri # hardware transcoding
     volumes:
@@ -16,4 +16,6 @@ services:
     environment:
       TZ: $TZ
       PUID: $PUID
-      PGID: $PGID     
+      PGID: $PGID
+    labels:
+      - swag=enable
