--- a/yml/nzbhydra.yml
+++ b/yml/nzbhydra.yml
@@ -5,8 +5,8 @@ services:
     restart: "unless-stopped"
     networks:
       - nzbhydra
-    ports:
-      - "5076:5076"
+    #ports:
+    #  - "5076:5076"
     volumes:
       - $DOCKERDIR/appdata/nzbhydra:/config
       - $DATADIR/usenet
@@ -15,3 +15,5 @@ services:
       TZ: $TZ
       PUID: $PUID
       PGID: $PGID
+    labels:
+      - swag=enable
