--- a/yml/sabnzbd.yml
+++ b/yml/sabnzbd.yml
@@ -4,16 +4,17 @@ services:
     container_name: sabnzbd
     restart: "unless-stopped"
     networks:
-      - arrs
-    #ports:
-    #  - "8086:8080" # this is probably already mapped to something else
+      - swag
+    ports:
+      - "8086:8080" # this is probably already mapped to something else
     volumes:
       - $DOCKERDIR/appdata/sabnzbd:/config
-      - $DATADIR/usenet:/downloads
+      - $DATADIR/usenet:/data/usenet
       - "/etc/localtime:/etc/localtime:ro"
     environment:
       TZ: $TZ
       PUID: $PUID
       PGID: $PGID
     labels:
-      - swag=enable
+      - "swag=enable"
+      - "com.centurylinklabs.watchtower.enable=true"
