--- a/yml/swag.yml
+++ b/yml/swag.yml
@@ -4,6 +4,8 @@ services:
     container_name: swag
     ports:
       - 81:81
+      - 443:443
+        #  - 80:80
     networks: 
       - swag
     # dockerproxy:
@@ -17,20 +19,9 @@ services:
       SUBDOMAINS: wildcard
       VALIDATION: dns
       DNSPLUGIN: cloudflare
-      DOCKER_MODS: linuxserver/mods:swag-auto-proxy|linuxserver/mods:swag-cloudflare-real-ip|linuxserver/mods:universal-docker|linuxserver/mods:universal-cloudflared|linuxserver/mods:swag-dashboard
+      EMAIL: $EMAIL
+      DOCKER_MODS: linuxserver/mods:swag-auto-proxy|linuxserver/mods:swag-cloudflare-real-ip|linuxserver/mods:universal-docker|linuxserver/mods:swag-dashboard
       #DOCKER_HOST: dockerproxy
-      CF_ZONE_ID: $CF_ZONE_ID
-      CF_ACCOUNT_ID: $CF_ACCOUNT_ID
-      CF_API_TOKEN: $CF_API_TOKEN
-      CF_TUNNEL_NAME: media-server
-      CF_TUNNEL_PASSWORD: $CF_TUNNEL_PASSWORD
-      CF_TUNNEL_CONFIG: |
-        ingress:
-          - hostname: $URL
-            service: https://$URL
-          - hostname: "*.$URL"
-            service: https://$URL
-          - service: http_status:404
     extra_hosts:
       - $URL:127.0.0.1
     volumes:
@@ -38,4 +29,13 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
     labels:
-      - "com.centurylinklabs.watchtower.enable=true"
+      - com.centurylinklabs.watchtower.enable=true
+  authelia:
+    image: ghcr.io/authelia/authelia:latest
+    container_name: authelia
+    user: "1000:1000"
+    environment:
+      - TZ: $TZ
+    volumes:
+      - $DOCKERDIR/appdata/authelia:/config
+    restart: unless-stopped
